# Streamfish

./: .dockerignore  .gitignore  Cargo.toml  README.md  build.rs  conda.yml  main.nf  mkdocs.yml  nextflow.config  setup.py
configs/: slicedice.toml  streamfish.toml
configs/benchmarks/unblock_all/: benchmark.toml  benchmark_dorado.toml  benchmark_guppy.toml  streamfish.toml  test.toml
configs/icarust/: streamfish.toml  test.ini  test.toml
configs/icarust/test_bacterial/: test.toml
configs/icarust/test_bacterial/streamfish/: test_dorado_fast.toml  test_dorado_hac.toml  test_dorado_sup.toml  test_guppy_fast.toml  test_guppy_hac.toml  test_guppy_sup.toml
configs/icarust/test_basic/: test.toml
configs/icarust/test_human/: target.toml  target.tsv  test.ini  test.toml
configs/icarust/test_sars/: test.toml
configs/icarust/test_virus/: target.tsv  test.toml
configs/icarust/test_vzv/: test.toml
configs/minknow/: streamfish.toml
configs/readfish/test_virus/: readfish.toml
configs/slicedice/: slicedice.toml  streamfish_1.toml  streamfish_2.toml  streamfish_3.toml  streamfish_4.toml
deepfish/: __init__.py
docker/: Dockerfile  Dockerfile.dev  Dockerfile.dorado.dev  Dockerfile.dorado.eval.dev  Dockerfile.doradori.dev  Dockerfile.icarust.dev  docker-compose.yml
docs/: index.md  installation.md
docs/stylesheets/: extra.css
manuscript/: results.md
manuscript/part1/: experiments.sh
manuscript/part1/configs/cipher/bacterial/: test_1.toml  test_2.toml  test_3.toml  test_4.toml  test_5.toml  test_6.toml  test_7.toml  test_8.toml
manuscript/part1/configs/cipher/sars/: test_1.toml  test_2.toml  test_3.toml  test_4.toml  test_5.toml  test_6.toml  test_7.toml  test_8.toml
manuscript/part1/configs/cipher/viral/: test_1.toml  test_2.toml  test_3.toml  test_4.toml  test_5.toml  test_6.toml  test_7.toml  test_8.toml
manuscript/part1/configs/experiments/experiment1/: benchmark.toml  benchmark_dorado.toml  benchmark_guppy.toml  streamfish.toml
manuscript/part1/configs/experiments/experiment1/plot1/: unblock_all_basecaller.toml  unblock_all_client.toml  unblock_all_mapper.toml  unblock_all_server.toml
manuscript/part1/configs/experiments/experiment2/plot1/: sars_target_ctrl.toml  sars_target_dyn.toml  sars_target_exp.toml
manuscript/part1/configs/experiments/experiment2/plot1_sars/: info.md  sars_genome.exp.toml  sars_icarust.toml  sars_streamfish.toml  sars_viorosaurus.exp.toml  sars_viorosaurus_nosars.exp.toml
manuscript/part1/configs/experiments/experiment2/plot1_sars/dorado/fast_hac/: sars_host_genome_dorado_fast.toml  sars_host_genome_dorado_hac.toml  sars_host_virosaurus_coronavir_dorado_fast.toml  (+3 more)
manuscript/part1/configs/experiments/experiment2/plot1_sars/sup/: sars_host_genome_dorado_sup.toml  sars_host_genome_guppy_sup.toml  sars_host_virosaurus_coronavir_dorado_sup.toml  sars_host_virosaurus_dorado_sup.toml
manuscript/part1/configs/experiments/experiment2/plot2_vzv/: vzv_icarust.toml  vzv_level1.exp.toml  vzv_level4.exp.toml  vzv_level5-1.exp.toml  vzv_level5-2.exp.toml  vzv_level6.exp.toml  vzv_streamfish.toml
manuscript/part1/configs/experiments/experiment2/plot2_vzv/dorado/: vzv_level1_dorado_hac.toml  vzv_level4_dorado_hac.toml  vzv_level5-1_dorado_hac.toml  vzv_level5-2_dorado_hac.toml  vzv_level6_dorado_hac.toml
manuscript/part1/configs/experiments/experiment2/plot2_vzv/guppy/: vzv_level1_guppy_hac.toml  vzv_level4_guppy_hac.toml  vzv_level5-1_guppy_hac.toml  vzv_level5-2_guppy_hac.toml  vzv_level6_guppy_hac.toml
manuscript/part1/data/: sars2.fasta
nextflow/: process.nf
proto/dori_api/: adaptive.proto  basecaller.proto  dynamic.proto
scripts/: CMakeLists.txt  README.md  basecall.cpp
scripts/analysis/: benchmark.icarust.sh  evaluate.icarust.py  evaluate.icarust.sh  evaluate.icarust.yml  icarust.simulation.yml
scripts/basecaller/: ont_client.py  ont_client.yml
scripts/cpp/: README.md  basecall.cpp
scripts/deepfish/: ncbi.virus.sh
scripts/guppy/: guppy.yml  guppy_client.py
scripts/icarust/: squiggles.sh
src/: config.rs  error.rs  main.rs  mod.rs  services.rs  terminal.rs  utils.rs
src/api/: client.rs  mod.rs
src/api/minknow/: mod.rs  services.rs
src/client/: auth.rs  data.rs  dori.rs  error.rs  icarust.rs  manager.rs  minknow.rs  mod.rs  readuntil.rs
src/client/services/: acquisition.rs  analysis.rs  data.rs  device.rs  error.rs  log.rs  manager.rs  mod.rs
src/clients/: auth.rs  data.rs  manager.rs  minknow.rs  mod.rs
src/dori/: mod.rs
src/evaluation/: error.rs  tools.rs
src/server/: dori.rs  error.rs  launcher.rs  mod.rs  watcher.rs
src/server/services/: adaptive.rs  basecaller.rs  dynamic.rs  mod.rs
src/tools/: minimap.rs  mod.rs
streamfish/: evaluation.py  terminal.py
(+8 files in other folders)
