[package]
name = "streamfish"
version = "0.1.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Streamfish: a streamy adaptive sampling client"
documentation = "https://github.com/esteinig/streamfish"
homepage = "https://github.com/meta-gp/streamfish"
repository = "https://github.com/meta-gp/streamfish"
readme = "README.md"
keywords = ["nanopore", "adaptive-sampling", "read-until", "minknow", "grpc"]
categories = ["science"]
license = "MIT"
edition = "2021"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]

[dependencies]
async-process = "1.7.0"
async-stream = "0.3.5"
byteorder = "1.4.3"
clap = { version = "4.3.23", features = ["derive", "env", "cargo", "unstable-styles", "wrap_help"] }
anstyle = "1.0.1"
colored = "2.0.4"
dotenvy = { version = "0.15.7", features = ["clap"] }
env_logger = "0.10.0"
futures = "0.3.28"
futures-core = "0.3.28"
futures-util = "0.3.28"
indoc = "2.0.1"
itertools = "0.11.0"
log = "^0.4.20"
minimap2 = "0.1.14"
prost = "0.11.9"
prost-types = "0.11"
quanta = "0.11.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
toml = "0.7.6"
tower = { version = "0.4.13", features = ["tokio", "tokio-stream"] }
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }
moka = { version = "0.11", features = ["future"] }
needletail = "0.5.1"
chrono = "0.4.26"
# icarust = { git = "https://github.com/esteinig/icarust", rev = "9e600d01909b6d1807bb445e9a13f4e5665279ef" }  
icarust = { path = "../icarust" } # for local testing updates
tonic = { git = "https://github.com/esteinig/tonic", tag = "v0.9.2-r1", features = ["transport", "tls"] }

[build-dependencies]
tonic-build = { version = "0.9", features = ["prost"] }

[dev-dependencies]
assert_cmd = "2.0.1"
predicates = "1"
float_eq = "0.6.1"
tempfile = "3.5"

[[bin]]
name = "streamfish"
path = "src/main.rs"
